# ndk_standalone_toolchain_sample

./: Dockerfile  README.md  run_container.sh
ndk_single_example/: CMakeLists.txt  Structure.cpp  main.cpp
